@@ -6,6 +6,7 @@ pts-core: Allow building virtual suites off external dependencies
 pts-core: Various result viewer improvements
 pts-core: Allow saving results under stress-run
 pts-core: Responsive/mobile result viewer improvements
+pts-core: Show local tests within the build-suite sub-command
 pts_Graph: Restore capability for drawing mini graphs for all results in a result file overview
 
 Phoronix Test Suite 9.6.0 Milestone 3
